# cmake_example

./: ReadMe.txt
NSP/: CMakeLists.txt
NSP/NSP/: CMakeLists.txt
NSP/NSP/lib/lua-5.3.4/: CMakeLists.txt
NSP/NSP/lib/lua-5.3.4/doc/: contents.html  manual.html  readme.html
NSP/NSP/lib/lua-5.3.4/src/: luaconf.h
NSP/NSP/lib/lua-expand/: CMakeLists.txt
NSP/NSP/lib/lua-expand/hello/: CMakeLists.txt  lua_hello.cpp
NSP/NSP/lib/lua-expand/qt/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myMesg.h  qtinterface.cpp
NSP/NSP/lib/lua-expand/src/: lua_hello.cpp
NSP/NSP/script/: test.lua  test1.lua  test2.lua  test_qt.lua  test_qt.txt
NSP/NSP/src/: test1.lua  test2.lua
NSP/lib/lua-5.3.4/: CMakeLists.txt
hello/hello/libhello/: CMakeLists.txt  hello.h
hello/hello/src/: CMakeLists.txt
multi/muti/: CMakeLists.txt
multi/muti/libmb1/: CMakeLists.txt  mb1.h
multi/muti/libmb2/: CMakeLists.txt  mb2.cpp  mb2.h
multi/muti/src/: CMakeLists.txt
multi_2/muti_2/: CMakeLists.txt
multi_2/muti_2/libmb1/: CMakeLists.txt  mb1.cpp
multi_2/muti_2/libmb2/: CMakeLists.txt  mb2.cpp  mb2.h
multi_2/muti_2/src/: CMakeLists.txt  main.cpp
others/: common.h
test1/test1/: CMakeLists.txt  main.cpp
test2/test2/: CMakeLists.txt
test3/test3/: CMakeLists.txt  hello.cpp  main.cpp
test4/test4/: CMakeLists.txt
test4/test4/hello/: hello.cpp
test5/test5/: CMakeLists.txt
test5/test5/hello/: CMakeLists.txt  hello.h
test6/test6/: CMakeLists.txt
test6/test6/hello/: CMakeLists.txt  hello.cpp  hello.h
test7/test7/: CMakeLists.txt
test7/test7/libmb1/: CMakeLists.txt  mb1.cpp  mb1.h
test7/test7/libmb2/: CMakeLists.txt  mb2.cpp  mb2.h
test7/test7/src/: CMakeLists.txt  main.cpp
test8/test8/: CMakeLists.txt  mlb.cpp
test9/test9/: CMakeLists.txt  main.cpp
test9/test9/hello/: CMakeLists.txt  hello.cpp  hello.h
test9/test9/lib/: lhello.exp  lhello.ilk  lhello.lib  lhellos.lib
